[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-utils = "0.1.2"
httpdate = "1.0.3"
